@@ -3,6 +3,7 @@ New features, changes and fixes in gnuplot version 4.6.5
 
 * NEW monotonic cubic splines using "smooth mcsplines"
 * NEW allow '+' pseudofile to sample the T axis in 2D parametric plots
+* NEW allow '++' pseudofile to sample the U/V axes in 3D parametric plots
 * NEW "sixel" terminal driver
 * NEW new object attribute clip/noclip
 * CHANGE maximum number of using spec columns is now 11
